fix bar spacing bug

--- a/app/assets/sass/modules/_a-chart.scss
+++ b/app/assets/sass/modules/_a-chart.scss
@@ -18,13 +18,15 @@
 
   &__main {
     height: 368px;
-    width: 852px;
+    padding: 0px 10px;
     margin: auto;
     margin-top: 42px;
-    justify-content: center;
+    justify-content: space-around;
     display: flex;
+
   }
 }
+
 /*
 
 
