--- a/app/assets/sass/modules/_a-vertical-bar.scss
+++ b/app/assets/sass/modules/_a-vertical-bar.scss
@@ -1,7 +1,7 @@
 .a-vertical-bar {
   display: flex;
   flex-direction: column;
-  margin: 0px 18px;
+  
   width: 40px;
   justify-content: flex-end;
 
@@ -26,7 +26,7 @@
 
   &__date {
 
-   align-self: center;
+    align-self: center;
     font-size: 10px;
     line-height: 15px;
     opacity: 0.4;
